[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-analysis"
version = "0.1.0"
description = "Structured Git History Comparison and Analysis Tool with LLM-powered summaries"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Git Analysis Team", email = "dev@example.com"}
]
keywords = ["git", "analysis", "version-control", "llm", "code-review", "history", "comparison"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "httpx>=0.25.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
]

llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
]

mcp = [
    "mcp>=0.1.0",
]

[project.scripts]
git-analysis = "git_analysis.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/git-analysis"
Repository = "https://github.com/your-username/git-analysis"
Issues = "https://github.com/your-username/git-analysis/issues"
Documentation = "https://github.com/your-username/git-analysis#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/git_analysis"]

[tool.hatch.build.targets.sdist]
include = [
    "src/git_analysis",
    "README.md",
    "pyproject.toml",
    "tests",
    "docs",
    "examples",
]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S110", "T201"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
strict_optional = false
exclude = [
    "tests",
    "scripts",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "git.*",
    "rich.*",
    "httpx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=src/git_analysis",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--timeout=5",
    "--timeout-method=thread",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/git_analysis"]
omit = [
    "tests/*",
    ".venv/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
]