[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regression-guard"
version = "0.1.0"
description = "Iterative multi-agent validation system to prevent code regressions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Solace Team", email = "dev@example.com"}
]
keywords = ["testing", "validation", "regression", "ci-cd", "quality-assurance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
regression-guard = "regression_guard.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/regression-guard"
Repository = "https://github.com/your-username/regression-guard"
Issues = "https://github.com/your-username/regression-guard/issues"
Documentation = "https://github.com/your-username/regression-guard#readme"

[tool.hatch.build.targets.wheel]
packages = ["regression_guard"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=regression_guard",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["regression_guard"]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
