[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "version-management"
version = "0.1.0"
description = "Date-based version management tool with changelog generation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Solace Team", email = "dev@example.com"}
]
keywords = ["versioning", "changelog", "git", "automation", "conventional-commits"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "GitPython>=3.1.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",  # For pyproject.toml parsing
]

[project.optional-dependencies]
llm = [
    "httpx>=0.24.0",  # For Ollama integration
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.scripts]
version-management = "version_management.cli:app"

[project.urls]
Homepage = "https://github.com/your-username/version-management"
Repository = "https://github.com/your-username/version-management"
Documentation = "https://github.com/your-username/version-management#readme"

[tool.hatch.build.targets.wheel]
packages = ["version_management"]

[tool.black]
target-version = ["py310"]
line-length = 180

[tool.ruff]
target-version = "py310"
line-length = 180

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "S"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--cov=version_management", "--cov-report=term-missing"]
